Add torrent stats for torrent detail
