# torrent/src/http/openapi_generated_api.go
@@ -1,6 +1,6 @@
 // Package http provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package http
 
 import (
@@ -31,6 +31,9 @@ type ServerInterface interface {
 	// Stream file
 	// (GET /torrents/{infoHash}/files/{fileIndex}/stream/{fileName})
 	StreamFile(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex, fileName FileName)
+	// Get torrent stats
+	// (GET /torrents/{infoHash}/stats)
+	GetTorrentStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash)
 }
 
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
@@ -73,6 +76,12 @@ func (_ Unimplemented) StreamFile(w http.ResponseWriter, r *http.Request, infoHa
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
+// Get torrent stats
+// (GET /torrents/{infoHash}/stats)
+func (_ Unimplemented) GetTorrentStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
 // ServerInterfaceWrapper converts contexts to parameters.
 type ServerInterfaceWrapper struct {
 	Handler            ServerInterface
@@ -84,7 +93,6 @@ type MiddlewareFunc func(http.Handler) http.Handler
 
 // DropAllTorrents operation middleware
 func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
@@ -107,12 +115,11 @@ func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *htt
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // ListTorrents operation middleware
 func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.ListTorrents(w, r)
@@ -122,12 +129,11 @@ func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.R
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // AddTorrent operation middleware
 func (siw *ServerInterfaceWrapper) AddTorrent(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.AddTorrent(w, r)
@@ -137,19 +143,18 @@ func (siw *ServerInterfaceWrapper) AddTorrent(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // GetTorrent operation middleware
 func (siw *ServerInterfaceWrapper) GetTorrent(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -163,19 +168,18 @@ func (siw *ServerInterfaceWrapper) GetTorrent(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // GetTorrentFileStats operation middleware
 func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -184,7 +188,7 @@ func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r 
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -198,19 +202,18 @@ func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r 
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
 }
 
 // StreamFile operation middleware
 func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -219,7 +222,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -228,7 +231,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileName" -------------
 	var fileName FileName
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "fileName", runtime.ParamLocationPath, chi.URLParam(r, "fileName"), &fileName)
+	err = runtime.BindStyledParameterWithOptions("simple", "fileName", chi.URLParam(r, "fileName"), &fileName, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileName", Err: err})
 		return
@@ -242,7 +245,32 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r.WithContext(ctx))
+	handler.ServeHTTP(w, r)
+}
+
+// GetTorrentStats operation middleware
+func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "infoHash" -------------
+	var infoHash InfoHash
+
+	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetTorrentStats(w, r, infoHash)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
 }
 
 type UnescapedCookieParamError struct {
@@ -375,6 +403,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/torrents/{infoHash}/files/{fileIndex}/stream/{fileName}", wrapper.StreamFile)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/torrents/{infoHash}/stats", wrapper.GetTorrentStats)
 	})
 
 	return r
