# torrent/src/http/openapi_generated_types.go
@@ -1,15 +1,15 @@
 // Package http provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package http
 
 // File defines model for File.
 type File struct {
-	// Name File name
-	Name string `json:"name"`
+	// Length File size
+	Length int64 `json:"length"`
 
-	// Size File size
-	Size int64 `json:"size"`
+	// Path File name
+	Path string `json:"path"`
 }
 
 // Stats defines model for Stats.
@@ -48,6 +48,21 @@ type Torrent struct {
 
 	// Size Torrent size
 	Size int64 `json:"size"`
+}
+
+// TorrentStats defines model for TorrentStats.
+type TorrentStats struct {
+	Files []TorrentStatsFile `json:"files"`
+	Stats Stats              `json:"stats"`
+}
+
+// TorrentStatsFile defines model for TorrentStatsFile.
+type TorrentStatsFile struct {
+	// BytesCompleted Bytes completed
+	BytesCompleted int64 `json:"bytesCompleted"`
+
+	// Length File length
+	Length int64 `json:"length"`
 }
 
 // FileIndex defines model for fileIndex.
